# gogame

./: LICENSE  README.md  game.sgf  gogame.cabal  package.yaml
.github/workflows/: haskell.yml
app/: Main.hs
assets/: markers.psd  white_marker.psd
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.5/: gogame-0.1.0.0-inplace.conf  package.cache
src/: Common.hs  DataTypes.hs  Datatypes.hs  Draw.hs  GameLogic.hs  GameRules.hs  Lib.hs  Lib2.hs
test/: Spec.hs  Spec2.hs  sdltesting.cabal
