cabal-version:      3.0

name:               gogame
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             ingakv
maintainer:         ingakv@stud.ntnu.no
-- copyright:
build-type:         Simple
extra-source-files:    README.md

common warnings
    ghc-options: -Wall


library
  exposed-modules:
      GameLogic
    , Lib
    , Common
    , Draw
    , DataTypes
  other-modules:
      Paths_gogame
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , split
    , sdl2
    , sdl2-image
    , text
    , monad-loops
    , sdl2-ttf
    , containers
  default-language: Haskell2010

executable gogame-exe
  main-is: Main.hs
  other-modules:
      Paths_gogame
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , gogame
    , split
  default-language: Haskell2010

test-suite gogame-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_gogame
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , doctest
    , gogame
    , hspec
    , QuickCheck
  default-language: Haskell2010
